# actions

./: .gitignore  CODEOWNERS  README.md
.github/: dependabot.yml
.github/actions/check-codeowner-auth/: README.md  action.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt
.github/actions/check-codeowner-auth/src/: __init__.py  _actions.py  approvals.py  authorize.py  codeowners.py  gh_api.py  trusted_bots.py
.github/actions/check-codeowner-auth/tests/: conftest.py  test_approvals.py  test_authorize.py  test_codeowners.py  test_main.py  test_trusted_bots.py
.github/workflows/: authorize.yml  ci.yml
